# HAA-Social-Autopilot

./: .dockerignore  .env.example  .gitignore  CHANGELOG.md  CLAUDE.md  DEVELOPMENT.md  Dockerfile  Makefile  README.md  TWITTER_LOGIN_GUIDE.md  diagnose_login.sh  docker-compose.yml  pw注意实现.md  verify_cookies.sh
backend/: interactive_login.py  pyproject.toml  requirements.txt  test_twitter_login.py
backend/app/: config.py  database.py  logger.py  main.py
backend/app/models/: __init__.py  conversation.py  engage.py  media.py  monitor.py  setting.py  tweet.py  twitter_account.py
backend/app/routers/: __init__.py  conversation.py  cookies.py  engage.py  llm.py  logs.py  media.py  monitor.py  settings.py  tweets.py
backend/app/schemas/: __init__.py  media.py  setting.py  tweet.py
backend/app/services/: conversation_service.py  llm_service.py  monitor_service.py  scheduler.py  tweet_guard.py  twitter_account_store.py  twitter_api.py  twitter_auth_backoff.py  twitter_auto_action_guard.py  twitter_browser.py  twitter_engage_strategy.py  twitter_risk_control.py  twitter_twikit.py
backend/app/utils/: helpers.py
backend/data/: twitter_cookies_template.json
backend/scripts/: start-backend.sh
backend/tests/: test_monitor_router.py  test_scheduler.py  test_settings_modes.py  test_tweet_guard.py  test_twitter_api_modes.py  test_twitter_auth_backoff.py  test_twitter_browser_cache.py  test_twitter_risk_control.py
demo-studio/: docker-compose.yml  index.html  trading.html
demo-studio/css/: studio.css
demo-studio/js/: app.js
demo-studio/js/effects/: animations.js  particles.js
demo-studio/js/generators/: numbers.js  tweets.js  usernames.js
demo-studio/js/scenes/: dashboard.js  engage.js  monitor.js
frontend/: .eslintrc.cjs  Dockerfile  index.html  nginx.conf  package-lock.json  package.json  pnpm-lock.yaml  vite.config.ts
frontend/src/: App.tsx
frontend/src/components/: Header.tsx  InlineConfirm.tsx  InlineNotice.tsx  Layout.tsx  Sidebar.tsx  TwitterCookieManager.tsx  TwitterGuardedButton.tsx  TwitterRiskStatus.tsx
frontend/src/lib/: utils.ts
frontend/src/pages/: Calendar.tsx  Conversations.tsx  Dashboard.tsx  Engage.tsx  Media.tsx  Monitor.tsx  Settings.tsx  Tweets.tsx
frontend/src/services/: api.ts
frontend/src/stores/: index.ts
(+1 files in other folders)
