[project]
name = "haa-social-autopilot"
version = "0.1.0"
description = "HAA Social Media Autopilot - Twitter/X automation tool"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
    {name = "HAA Team"}
]

dependencies = [
    "fastapi>=0.109.2",
    "uvicorn[standard]>=0.27.1",
    "sqlalchemy>=2.0.25",
    "aiosqlite>=0.19.0",
    "apscheduler>=3.10.4",
    "twikit>=2.3.3",
    "playwright>=1.41.2",
    "openai>=1.12.0",
    "pydantic>=2.6.1",
    "pydantic-settings>=2.1.0",
    "python-dotenv>=1.0.1",
    "python-multipart>=0.0.9",
    "aiofiles>=23.2.1",
    "pillow>=10.2.0",
    "httpx[socks]>=0.26.0",
    "python-dateutil>=2.8.2",
    "lxml",
    "webvtt-py",
    "m3u8",
    "Js2Py-3.13",
    "XClientTransaction",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.4",
    "httpx[socks]>=0.26.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_default_fixture_loop_scope = "function"
filterwarnings = [
    "ignore:co_lnotab is deprecated, use co_lines instead\\.:DeprecationWarning:js2py_\\.utils\\.injector",
]
